src/dsl_externo/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOS_PUNTOS
    NUEVA_LINEA
    PARENTESIS_ABRE
    PARENTESIS_CIERRA
    PUNTO_COMA

Grammar

Rule 0     S' -> partido
Rule 1     partido -> FECHA fecha
Rule 2     partido -> EQUIPO_LOCAL CODIGO_EQUIPO
Rule 3     partido -> EQUIPO_VISITANTE CODIGO_EQUIPO
Rule 4     partido -> FORMACION_LOCAL formacion
Rule 5     partido -> FORMACION_VISITANTE formacion
Rule 6     partido -> TITULARES_LOCAL lista_numeros
Rule 7     partido -> TITULARES_VISITANTE lista_numeros
Rule 8     partido -> BANCO_LOCAL lista_numeros
Rule 9     partido -> BANCO_VISITANTE lista_numeros
Rule 10    partido -> evento
Rule 11    fecha -> CADENA
Rule 12    formacion -> NUMERO GUION NUMERO GUION NUMERO
Rule 13    lista_numeros -> NUMERO
Rule 14    lista_numeros -> NUMERO COMA lista_numeros
Rule 15    evento -> gol
Rule 16    evento -> tarjeta
Rule 17    evento -> cambio
Rule 18    gol -> GOL CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA NUMERO
Rule 19    gol -> GOL CODIGO_EQUIPO COMA TIEMPO COMA NUMERO
Rule 20    tarjeta -> TARJETA CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA COLOR
Rule 21    cambio -> CAMBIO CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA NUMERO

Terminals, with rules where they appear

BANCO_LOCAL          : 8
BANCO_VISITANTE      : 9
CADENA               : 11
CAMBIO               : 21
CODIGO_EQUIPO        : 2 3 18 19 20 21
COLOR                : 20
COMA                 : 14 18 18 18 19 19 20 20 20 21 21 21
DOS_PUNTOS           : 
EQUIPO_LOCAL         : 2
EQUIPO_VISITANTE     : 3
FECHA                : 1
FORMACION_LOCAL      : 4
FORMACION_VISITANTE  : 5
GOL                  : 18 19
GUION                : 12 12
NUEVA_LINEA          : 
NUMERO               : 12 12 12 13 14 18 18 19 20 21 21
PARENTESIS_ABRE      : 
PARENTESIS_CIERRA    : 
PUNTO_COMA           : 
TARJETA              : 20
TIEMPO               : 18 19 20 21
TITULARES_LOCAL      : 6
TITULARES_VISITANTE  : 7
error                : 

Nonterminals, with rules where they appear

cambio               : 17
evento               : 10
fecha                : 1
formacion            : 4 5
gol                  : 15
lista_numeros        : 6 7 8 9 14
partido              : 0
tarjeta              : 16

Parsing method: LALR

state 0

    (0) S' -> . partido
    (1) partido -> . FECHA fecha
    (2) partido -> . EQUIPO_LOCAL CODIGO_EQUIPO
    (3) partido -> . EQUIPO_VISITANTE CODIGO_EQUIPO
    (4) partido -> . FORMACION_LOCAL formacion
    (5) partido -> . FORMACION_VISITANTE formacion
    (6) partido -> . TITULARES_LOCAL lista_numeros
    (7) partido -> . TITULARES_VISITANTE lista_numeros
    (8) partido -> . BANCO_LOCAL lista_numeros
    (9) partido -> . BANCO_VISITANTE lista_numeros
    (10) partido -> . evento
    (15) evento -> . gol
    (16) evento -> . tarjeta
    (17) evento -> . cambio
    (18) gol -> . GOL CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA NUMERO
    (19) gol -> . GOL CODIGO_EQUIPO COMA TIEMPO COMA NUMERO
    (20) tarjeta -> . TARJETA CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA COLOR
    (21) cambio -> . CAMBIO CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA NUMERO

    FECHA           shift and go to state 2
    EQUIPO_LOCAL    shift and go to state 3
    EQUIPO_VISITANTE shift and go to state 4
    FORMACION_LOCAL shift and go to state 5
    FORMACION_VISITANTE shift and go to state 6
    TITULARES_LOCAL shift and go to state 7
    TITULARES_VISITANTE shift and go to state 8
    BANCO_LOCAL     shift and go to state 9
    BANCO_VISITANTE shift and go to state 10
    GOL             shift and go to state 15
    TARJETA         shift and go to state 16
    CAMBIO          shift and go to state 17

    partido                        shift and go to state 1
    evento                         shift and go to state 11
    gol                            shift and go to state 12
    tarjeta                        shift and go to state 13
    cambio                         shift and go to state 14

state 1

    (0) S' -> partido .



state 2

    (1) partido -> FECHA . fecha
    (11) fecha -> . CADENA

    CADENA          shift and go to state 19

    fecha                          shift and go to state 18

state 3

    (2) partido -> EQUIPO_LOCAL . CODIGO_EQUIPO

    CODIGO_EQUIPO   shift and go to state 20


state 4

    (3) partido -> EQUIPO_VISITANTE . CODIGO_EQUIPO

    CODIGO_EQUIPO   shift and go to state 21


state 5

    (4) partido -> FORMACION_LOCAL . formacion
    (12) formacion -> . NUMERO GUION NUMERO GUION NUMERO

    NUMERO          shift and go to state 23

    formacion                      shift and go to state 22

state 6

    (5) partido -> FORMACION_VISITANTE . formacion
    (12) formacion -> . NUMERO GUION NUMERO GUION NUMERO

    NUMERO          shift and go to state 23

    formacion                      shift and go to state 24

state 7

    (6) partido -> TITULARES_LOCAL . lista_numeros
    (13) lista_numeros -> . NUMERO
    (14) lista_numeros -> . NUMERO COMA lista_numeros

    NUMERO          shift and go to state 26

    lista_numeros                  shift and go to state 25

state 8

    (7) partido -> TITULARES_VISITANTE . lista_numeros
    (13) lista_numeros -> . NUMERO
    (14) lista_numeros -> . NUMERO COMA lista_numeros

    NUMERO          shift and go to state 26

    lista_numeros                  shift and go to state 27

state 9

    (8) partido -> BANCO_LOCAL . lista_numeros
    (13) lista_numeros -> . NUMERO
    (14) lista_numeros -> . NUMERO COMA lista_numeros

    NUMERO          shift and go to state 26

    lista_numeros                  shift and go to state 28

state 10

    (9) partido -> BANCO_VISITANTE . lista_numeros
    (13) lista_numeros -> . NUMERO
    (14) lista_numeros -> . NUMERO COMA lista_numeros

    NUMERO          shift and go to state 26

    lista_numeros                  shift and go to state 29

state 11

    (10) partido -> evento .

    $end            reduce using rule 10 (partido -> evento .)


state 12

    (15) evento -> gol .

    $end            reduce using rule 15 (evento -> gol .)


state 13

    (16) evento -> tarjeta .

    $end            reduce using rule 16 (evento -> tarjeta .)


state 14

    (17) evento -> cambio .

    $end            reduce using rule 17 (evento -> cambio .)


state 15

    (18) gol -> GOL . CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA NUMERO
    (19) gol -> GOL . CODIGO_EQUIPO COMA TIEMPO COMA NUMERO

    CODIGO_EQUIPO   shift and go to state 30


state 16

    (20) tarjeta -> TARJETA . CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA COLOR

    CODIGO_EQUIPO   shift and go to state 31


state 17

    (21) cambio -> CAMBIO . CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA NUMERO

    CODIGO_EQUIPO   shift and go to state 32


state 18

    (1) partido -> FECHA fecha .

    $end            reduce using rule 1 (partido -> FECHA fecha .)


state 19

    (11) fecha -> CADENA .

    $end            reduce using rule 11 (fecha -> CADENA .)


state 20

    (2) partido -> EQUIPO_LOCAL CODIGO_EQUIPO .

    $end            reduce using rule 2 (partido -> EQUIPO_LOCAL CODIGO_EQUIPO .)


state 21

    (3) partido -> EQUIPO_VISITANTE CODIGO_EQUIPO .

    $end            reduce using rule 3 (partido -> EQUIPO_VISITANTE CODIGO_EQUIPO .)


state 22

    (4) partido -> FORMACION_LOCAL formacion .

    $end            reduce using rule 4 (partido -> FORMACION_LOCAL formacion .)


state 23

    (12) formacion -> NUMERO . GUION NUMERO GUION NUMERO

    GUION           shift and go to state 33


state 24

    (5) partido -> FORMACION_VISITANTE formacion .

    $end            reduce using rule 5 (partido -> FORMACION_VISITANTE formacion .)


state 25

    (6) partido -> TITULARES_LOCAL lista_numeros .

    $end            reduce using rule 6 (partido -> TITULARES_LOCAL lista_numeros .)


state 26

    (13) lista_numeros -> NUMERO .
    (14) lista_numeros -> NUMERO . COMA lista_numeros

    $end            reduce using rule 13 (lista_numeros -> NUMERO .)
    COMA            shift and go to state 34


state 27

    (7) partido -> TITULARES_VISITANTE lista_numeros .

    $end            reduce using rule 7 (partido -> TITULARES_VISITANTE lista_numeros .)


state 28

    (8) partido -> BANCO_LOCAL lista_numeros .

    $end            reduce using rule 8 (partido -> BANCO_LOCAL lista_numeros .)


state 29

    (9) partido -> BANCO_VISITANTE lista_numeros .

    $end            reduce using rule 9 (partido -> BANCO_VISITANTE lista_numeros .)


state 30

    (18) gol -> GOL CODIGO_EQUIPO . COMA TIEMPO COMA NUMERO COMA NUMERO
    (19) gol -> GOL CODIGO_EQUIPO . COMA TIEMPO COMA NUMERO

    COMA            shift and go to state 35


state 31

    (20) tarjeta -> TARJETA CODIGO_EQUIPO . COMA TIEMPO COMA NUMERO COMA COLOR

    COMA            shift and go to state 36


state 32

    (21) cambio -> CAMBIO CODIGO_EQUIPO . COMA TIEMPO COMA NUMERO COMA NUMERO

    COMA            shift and go to state 37


state 33

    (12) formacion -> NUMERO GUION . NUMERO GUION NUMERO

    NUMERO          shift and go to state 38


state 34

    (14) lista_numeros -> NUMERO COMA . lista_numeros
    (13) lista_numeros -> . NUMERO
    (14) lista_numeros -> . NUMERO COMA lista_numeros

    NUMERO          shift and go to state 26

    lista_numeros                  shift and go to state 39

state 35

    (18) gol -> GOL CODIGO_EQUIPO COMA . TIEMPO COMA NUMERO COMA NUMERO
    (19) gol -> GOL CODIGO_EQUIPO COMA . TIEMPO COMA NUMERO

    TIEMPO          shift and go to state 40


state 36

    (20) tarjeta -> TARJETA CODIGO_EQUIPO COMA . TIEMPO COMA NUMERO COMA COLOR

    TIEMPO          shift and go to state 41


state 37

    (21) cambio -> CAMBIO CODIGO_EQUIPO COMA . TIEMPO COMA NUMERO COMA NUMERO

    TIEMPO          shift and go to state 42


state 38

    (12) formacion -> NUMERO GUION NUMERO . GUION NUMERO

    GUION           shift and go to state 43


state 39

    (14) lista_numeros -> NUMERO COMA lista_numeros .

    $end            reduce using rule 14 (lista_numeros -> NUMERO COMA lista_numeros .)


state 40

    (18) gol -> GOL CODIGO_EQUIPO COMA TIEMPO . COMA NUMERO COMA NUMERO
    (19) gol -> GOL CODIGO_EQUIPO COMA TIEMPO . COMA NUMERO

    COMA            shift and go to state 44


state 41

    (20) tarjeta -> TARJETA CODIGO_EQUIPO COMA TIEMPO . COMA NUMERO COMA COLOR

    COMA            shift and go to state 45


state 42

    (21) cambio -> CAMBIO CODIGO_EQUIPO COMA TIEMPO . COMA NUMERO COMA NUMERO

    COMA            shift and go to state 46


state 43

    (12) formacion -> NUMERO GUION NUMERO GUION . NUMERO

    NUMERO          shift and go to state 47


state 44

    (18) gol -> GOL CODIGO_EQUIPO COMA TIEMPO COMA . NUMERO COMA NUMERO
    (19) gol -> GOL CODIGO_EQUIPO COMA TIEMPO COMA . NUMERO

    NUMERO          shift and go to state 48


state 45

    (20) tarjeta -> TARJETA CODIGO_EQUIPO COMA TIEMPO COMA . NUMERO COMA COLOR

    NUMERO          shift and go to state 49


state 46

    (21) cambio -> CAMBIO CODIGO_EQUIPO COMA TIEMPO COMA . NUMERO COMA NUMERO

    NUMERO          shift and go to state 50


state 47

    (12) formacion -> NUMERO GUION NUMERO GUION NUMERO .

    $end            reduce using rule 12 (formacion -> NUMERO GUION NUMERO GUION NUMERO .)


state 48

    (18) gol -> GOL CODIGO_EQUIPO COMA TIEMPO COMA NUMERO . COMA NUMERO
    (19) gol -> GOL CODIGO_EQUIPO COMA TIEMPO COMA NUMERO .

    COMA            shift and go to state 51
    $end            reduce using rule 19 (gol -> GOL CODIGO_EQUIPO COMA TIEMPO COMA NUMERO .)


state 49

    (20) tarjeta -> TARJETA CODIGO_EQUIPO COMA TIEMPO COMA NUMERO . COMA COLOR

    COMA            shift and go to state 52


state 50

    (21) cambio -> CAMBIO CODIGO_EQUIPO COMA TIEMPO COMA NUMERO . COMA NUMERO

    COMA            shift and go to state 53


state 51

    (18) gol -> GOL CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA . NUMERO

    NUMERO          shift and go to state 54


state 52

    (20) tarjeta -> TARJETA CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA . COLOR

    COLOR           shift and go to state 55


state 53

    (21) cambio -> CAMBIO CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA . NUMERO

    NUMERO          shift and go to state 56


state 54

    (18) gol -> GOL CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA NUMERO .

    $end            reduce using rule 18 (gol -> GOL CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA NUMERO .)


state 55

    (20) tarjeta -> TARJETA CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA COLOR .

    $end            reduce using rule 20 (tarjeta -> TARJETA CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA COLOR .)


state 56

    (21) cambio -> CAMBIO CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA NUMERO .

    $end            reduce using rule 21 (cambio -> CAMBIO CODIGO_EQUIPO COMA TIEMPO COMA NUMERO COMA NUMERO .)

